--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -13,15 +13,28 @@
     justify-content: center;
 
     .left-content {
-      width: 30%;
+      width: 40%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 10px;
+      // margin: 15px 0;
+      align-items: center;
+
+      .logo-container {
+      }
     }
 
     .center-content {
-      width: 40%;
+      width: 20%;
     }
 
     .right-content {
-      width: 30%;
+      width: 40%;
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      margin: 15px 0;
     }
   }
 }
