--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,40 +1,97 @@
-.home-header-container {
-  height: 70px;
-  border: 1px solid red;
-  width: 100%;
+.homepage {
+  background: #3cb6d3;
+  height: 500px;
   display: flex;
-  justify-content: center;
-  // font-family: proxima-nova, sans-serif;
+  flex-direction: column;
 
-  .home-header-content {
-    width: 60%;
-    height: 100%;
+  .home-header-container {
+    height: 70px;
+    border: 1px solid red;
+    width: 100%;
     display: flex;
     justify-content: center;
+    background: #3cb6d3;
+    font-family: proxima-nova, sans-serif;
 
-    .left-content {
-      width: 40%;
+    .home-header-content {
+      width: 60%;
+      height: 100%;
       display: flex;
-      flex-direction: row;
       justify-content: center;
-      gap: 10px;
-      // margin: 15px 0;
-      align-items: center;
 
-      .logo-container {
+      .left-content {
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 10px;
+        // margin: 15px 0;
+        align-items: center;
+
+        .logo-container {
+        }
+      }
+
+      .center-content {
+        width: 20%;
+      }
+
+      .right-content {
+        width: 40%;
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+        margin: 15px 0;
       }
     }
+  }
 
-    .center-content {
-      width: 20%;
+  .home-header-banner {
+    height: 430px;
+    background: url("../../assets/banner/banner.svg") bottom repeat-x;
+    background-size: 1280px;
+
+    .title1 {
+      text-align: center;
+      font-size: 35px;
+      text-shadow: 1px 1px 1px #333;
+      margin-bottom: 10px;
+      color: white;
+      margin-top: 30px;
     }
 
-    .right-content {
-      width: 40%;
+    .title2 {
+      text-align: center;
+      font-size: 20px;
+      text-shadow: 1px 1px 1px #333;
+      color: white;
+      font-weight: 600;
+    }
+
+    .search-bar {
+      text-align: center;
+      width: fit-content;
       display: flex;
-      gap: 10px;
       justify-content: center;
-      margin: 15px 0;
+      align-items: center;
+      margin: 30px auto;
+      padding: 10px;
+      border-radius: 30px;
+      background: #f7d800;
+      gap: 3px;
+
+      i {
+        margin: 0 5px;
+        font-size: 20px;
+      }
+
+      input {
+        height: 30px;
+        width: 320px;
+        background: transparent;
+        border: none;
+        outline: none;
+      }
     }
   }
 }
