--- a/src/containers/System/User/TableManageHomelisting.scss
+++ b/src/containers/System/User/TableManageHomelisting.scss
@@ -22,7 +22,7 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04aa6d;
+  background-color: #3cb6d3;
   color: white;
 }
 
