--- a/src/containers/System/User/HomeListingRedux.scss
+++ b/src/containers/System/User/HomeListingRedux.scss
@@ -1,3 +1,11 @@
+.user-redux-container {
+  padding-top: 30px;
+
+  .title {
+    font-size: 25px;
+  }
+}
+
 //css for preview image
 .preview-img-container {
   .label-upload {
