--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,7 +8,7 @@ html {
   background-size: cover;
   font-family: $fontmain;
   font-size: $base-size - 2px;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -18,7 +18,7 @@ html {
     text-transform: uppercase;
     font-weight: bold;
     font-size: $base-size + 4px;
-    margin-top: 15px;
+    // margin-top: 15px;
     color: $colormain;
   }
   .content {
