--- a/src/containers/HomePage/Homepage.scss
+++ b/src/containers/HomePage/Homepage.scss
@@ -42,6 +42,10 @@
       gap: 10px;
       justify-content: center;
       margin: 15px 0;
+
+      button {
+        // background: #f7d800 !important;
+      }
     }
   }
 }
@@ -63,6 +67,8 @@
       padding-bottom: 20px;
       color: white;
       padding-top: 50px;
+      color: #f7d800;
+      font-weight: 700;
     }
 
     .title2 {
@@ -71,6 +77,7 @@
       text-shadow: 1px 1px 1px #333;
       color: white;
       font-weight: 600;
+      // color:  #f7d800;
     }
   }
 
@@ -79,5 +86,6 @@
     margin: 0 auto;
     width: 400px;
     height: 60px;
+    // background: #f7d800 !important;
   }
 }
