--- a/src/containers/HomePage/Homepage.scss
+++ b/src/containers/HomePage/Homepage.scss
@@ -17,7 +17,7 @@
     width: 60%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 
     .left-content {
       width: 40%;
@@ -79,13 +79,54 @@
       font-weight: 600;
       // color:  #f7d800;
     }
-  }
 
-  .search-select {
-    padding-top: 40px;
-    margin: 0 auto;
-    width: 400px;
-    height: 60px;
-    // background: #f7d800 !important;
+    .search-select {
+      padding-top: 40px;
+      margin: 0 auto;
+      width: 400px;
+      height: 60px;
+      padding-bottom: 60px;
+      // background: #f7d800 !important;
+    }
+
+    .search-homelisting {
+      background: #f7d800;
+      width: 600px;
+      height: 60px;
+      margin: 0 auto;
+      border-radius: 5px;
+      padding: 5px 10px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 10px;
+
+      .search-top {
+        padding: 5px;
+        .search-address {
+          font-size: 16px;
+        }
+
+        .search-price {
+          font-weight: 700;
+        }
+      }
+
+      .search-detail {
+        background: white;
+        border-radius: 5px;
+        width: 60px;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 0;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #3cb6d3;
+        }
+      }
+    }
   }
 }
