--- a/src/containers/HomePage/Homepage.scss
+++ b/src/containers/HomePage/Homepage.scss
@@ -20,31 +20,41 @@
     justify-content: space-between;
 
     .left-content {
-      width: 40%;
       display: flex;
       flex-direction: row;
       justify-content: center;
-      gap: 10px;
-      // margin: 15px 0;
+      gap: 5px;
       align-items: center;
-
-      .logo-container {
-      }
-    }
-
-    .center-content {
-      width: 20%;
+      cursor: pointer;
+      font-size: 25px;
+      color: white;
+      font-weight: 600;
+      background-color: #3cb6d3;
     }
 
     .right-content {
-      width: 40%;
       display: flex;
       gap: 10px;
-      justify-content: center;
-      margin: 15px 0;
 
       button {
-        // background: #f7d800 !important;
+        padding: 10px;
+        margin: auto;
+        border-radius: 15px;
+        border: none;
+        background: white !important;
+        font-weight: 600;
+        color: #3cb6d3;
+      }
+
+      .post-for-free {
+        margin: auto;
+        padding: 10px;
+        border-radius: 15px;
+        border: none;
+        background: white;
+        font-weight: 600;
+        color: #3cb6d3;
+        cursor: pointer;
       }
     }
   }
